...
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="-80dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="182dp"
        android:layout_height="136dp"
        android:layout_marginTop="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filencryptTitle" />

    <Button
        android:id="@+id/button_choose_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Choose file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
