<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ciphers.HillCipher">


    <TextView
        android:id="@+id/hillCipher_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Hill Cipher\n2 x 2"
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="-80dp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/encrypt_Hill_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="enter text/cipher"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/hillKey"
        app:layout_constraintEnd_toEndOf="@+id/hillCipher_title"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/hillCipher_title" />

    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/textInputLayout_dec"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/hillCipher_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hillCipher_title"
        app:layout_constraintVertical_bias="0.384">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/encrHill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Encrypt Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_dec" />

    <Button
        android:id="@+id/decrHill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Decrypt Cipher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encrHill" />

    <Button
        android:id="@+id/copyHill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Copy Result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decrHill" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/hillKey"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:hint="enter key"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/encrHill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/hillCipher_title" />

    <TextView
        android:id="@+id/decr_msg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Encrypted/Decrypted message:"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyHill"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/hill_msg_cntxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decr_msg_title"
        app:layout_constraintVertical_bias="0.155" />

</androidx.constraintlayout.widget.ConstraintLayout>