<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileEditing">

    <TextView
        android:id="@+id/prof_edit_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="Edit Profile"
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearl2"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_background_profile"
        android:elevation="3dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernametext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Username: "
                android:textAlignment="viewStart"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/usernameinsert"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="Enter username"
                android:inputType="textPersonName"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="#D9D9D9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="Email:"
                android:textAlignment="viewStart"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailinsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Enter email address"
                android:inputType="textEmailAddress"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="#D9D9D9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/agetext"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="-55dp"
                android:layout_weight="1"
                android:text="Age:"
                android:textAlignment="viewStart"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ageinsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="Enter age"
                android:inputType="number"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="#D9D9D9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/update_prof_btn"
        android:layout_width="146dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:text="Update Profile"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearl2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>