<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ciphers.RailFence">


    <TextView
        android:id="@+id/railfence_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Rail Fence Cipher"
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="-80dp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/encrypt_RailFence_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="enter text/cipher"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_dec"
        app:layout_constraintEnd_toEndOf="@+id/railfence_title"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/railfence_title"
        app:layout_constraintTop_toTopOf="@+id/railfence_title"
        app:layout_constraintVertical_bias="0.558" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/railRow_size"
        android:layout_width="189dp"
        android:layout_height="43dp"
        android:layout_marginBottom="36dp"
        android:hint="enter number of rows"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/encrRailFence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/railfence_title" />

    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/textInputLayout_dec"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/railfence_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/railfence_title"
        app:layout_constraintVertical_bias="0.374">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/encrRailFence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Encrypt Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_dec" />

    <Button
        android:id="@+id/decrRailFence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Decrypt Cipher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encrRailFence" />

    <Button
        android:id="@+id/copyRailFence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Copy Result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decrRailFence" />

    <TextView
        android:id="@+id/decr_msg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Encrypted/Decrypted message:"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyRailFence"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/rail_msg_cntxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decr_msg_title"
        app:layout_constraintVertical_bias="0.139" />

</androidx.constraintlayout.widget.ConstraintLayout>